--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <article class="about-me-content">
             <p>
-                This is the info about me.
+                As a current HR professional with a background as a classically-trained musician, I bring a unique and diverse skillset with me into the field of tech. With a passion for code, I am in search of a career that I can grow into and be challenged at daily. I am married with a nearly 2 year old boy at home as well as two dogs and a cat. If you are interested in contacting me, please use the contact form at the bottom of the page to get in touch or feel free to reach out via LinkedIn. 
             </p> 
         </article>
     </section>
@@ -85,7 +85,8 @@
         <form>
             <label for="contact-name">Your Name</label>
             <input type="text" id="contact-name" placeholder="Your Name" />
-
+            <label for="email">Your Email</label>
+            <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
             <label for="contact-message">Message</label>
             <textarea id="contact-message" placeholder="Message"></textarea>
 
