added styles for About Me

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>&#60CG/&#62</h1>
         <nav>
             <ul>
-                <li><a href="#hero">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="home">
         <div class="hero-cta">
             <h2>Cody Griffin</h2>
             <h3>Full Stack Web Developer</h3>
@@ -49,19 +49,19 @@
         </nav>
     </section>
 
-    <section class="about-me">
+    <section class="about-me" id="about-me">
         <h2>About Me</h2>
-        <div class="selfie-img">
+        <div class="my-info">
             <img src="./assets/images/avatar.png" alt="avatar of Cody">
+            <article>
+                <p>
+                    As a current HR professional with a background as a classically-trained musician, I bring a unique and diverse skillset with me into the field of tech. With a passion for code, I am in search of a career that I can grow into and be challenged at daily. I am married with a nearly 2 year old boy at home as well as two dogs and a cat. If you are interested in contacting me, please use the contact form at the bottom of the page to get in touch or feel free to reach out via LinkedIn. 
+                </p> 
+            </article>
         </div>
-        <article class="about-me-content">
-            <p>
-                As a current HR professional with a background as a classically-trained musician, I bring a unique and diverse skillset with me into the field of tech. With a passion for code, I am in search of a career that I can grow into and be challenged at daily. I am married with a nearly 2 year old boy at home as well as two dogs and a cat. If you are interested in contacting me, please use the contact form at the bottom of the page to get in touch or feel free to reach out via LinkedIn. 
-            </p> 
-        </article>
     </section>
 
-    <section class="projects">
+    <section class="projects" id="projects">
         <h2>Projects</h2>
         <div class="project">
             <h3>Run Buddy</h3>
@@ -80,7 +80,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <h2>Contact Me</h2>
         <form>
             <label for="contact-name">Your Name</label>
