styled the Projects section

--- a/index.html
+++ b/index.html
@@ -64,19 +64,31 @@
     <section class="projects" id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Run Buddy</h3>
-            <img src="" alt="">
-            <p>A landing page created with valilla HTML and CSS, designed to be engaging, responsive, accessible, and functional. This site displays my knowledge of up-to-date developement practices with website design, form, and functionality.</p>
+            <a href="https://cynogriffin.github.io/run-buddy/">
+                <img src="./assets/images/run buddy.PNG" alt="website screenshot">
+            </a>
+            <div class="project-words">
+                <h3>Run Buddy</h3>
+                <p>A landing page created with valilla HTML and CSS, designed to be engaging, responsive, accessible, and functional. This site displays my knowledge of up-to-date developement practices with website design, form, and functionality.</p>
+            </div>
         </div>
         <div class="project">
-            <h3>Robot Gladiators</h3>
-            <img src="" alt="">
-            <p>An in-browser, user-led robot fight similation game operating on pure vanilla JavaScript. This showcases my knowledge of all manner of JavaScript functionality and tools, and how I can use them to create an in-depth, interactive user experience.</p>
+            <a href="https://cynogriffin.github.io/robot-gladiators/">
+                <img src="./assets/images/robot gladiators.PNG" alt="browser alert">
+            </a>
+            <div class="project-words">
+                <h3>Robot Gladiators</h3>
+                <p>An in-browser, user-led robot fight similation game operating on pure vanilla JavaScript. This showcases my knowledge of all manner of JavaScript functionality and tools, and how I can use them to create an in-depth, interactive user experience.</p>
+            </div>
         </div>
         <div class="project">
-            <h3>Project 3</h3>
-            <img src="" alt="">
-            <p>3rd Project Coming Soon!</p>
+            <a href="">
+                <img src="./assets/images/under construction.jpg" alt="under construction">
+            </a>
+            <div class="project-words">
+                <h3>Project 3</h3>
+                <p>3rd Project Coming Soon!</p>
+            </div>
         </div>
     </section>
 
