added group project to portfolio page

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
             </div>
         </div>
         <div class="project">
-            <a href="">
-                <img src="./assets/images/under construction.jpg" alt="under construction">
+            <a href="https://github.com/cynogriffin/spacelaunch-tracker">
+                <img src="./assets/images/space-launch.jpg" alt="space launch">
             </a>
             <div class="project-words">
-                <h3>Project 3</h3>
-                <p>3rd Project Coming Soon!</p>
+                <h3>Space Launch Tracker</h3>
+                <p>A web page application that pulls information from 3 different API's. Presents the user with upcoming space launches, current space launch news, and a space picture of the day.</p>
             </div>
         </div>
     </section>
