--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
             </div>
         </div>
         <div class="project">
-            <a href="https://cynogriffin.github.io/robot-gladiators/">
+            <a href="https://github.com/cynogriffin/lettuce-b-frank">
                 <img src="./assets/images/robot gladiators.PNG" alt="browser alert">
             </a>
             <div class="project-words">
-                <h3>Robot Gladiators</h3>
-                <p>An in-browser, user-led robot fight similation game operating on pure vanilla JavaScript. This showcases my knowledge of all manner of JavaScript functionality and tools, and how I can use them to create an in-depth, interactive user experience.</p>
+                <h3>Restaurant Reservation App</h3>
+                <p>A full stack restaurant reservation app</p>
             </div>
         </div>
         <div class="project">
