added screenshot for lettuce

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="project">
             <a href="https://github.com/cynogriffin/lettuce-b-frank">
-                <img src="./assets/images/robot gladiators.PNG" alt="browser alert">
+                <img src="./assets/images/lettuce.PNG" alt="browser alert">
             </a>
             <div class="project-words">
                 <h3>Restaurant Reservation App</h3>
