removed form for now; replaced youtube with hashnode link to dev blog

--- a/index.html
+++ b/index.html
@@ -41,11 +41,16 @@
                     <img src="./assets/images/github.png" alt="github icon">
                 </a>
             </div>
-            <div class="youtube">
+            <!-- <div class="youtube">
                 <a href="https://www.youtube.com/channel/UCZ_rK_RCpUqEIWsDnl-VSfA" target="_blank">
                     <img src="./assets/images/youtube.png" alt="youtube icon">
                 </a>
-            </div>                          
+            </div>                           -->
+            <div class="hashnode">
+                <a href="https://cynogriffin.hashnode.dev/" target="_blank">             
+                    <img src="./assets/images/hashnode.png" alt="hashnode icon">
+                </a>
+            </div>
         </nav>
     </section>
 
@@ -64,7 +69,7 @@
     <section class="projects" id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <a href="https://cynogriffin.github.io/run-buddy/">
+            <a href="https://cynogriffin.github.io/run-buddy/" target="_blank">
                 <img src="./assets/images/run buddy.PNG" alt="website screenshot">
             </a>
             <div class="project-words">
@@ -73,7 +78,7 @@
             </div>
         </div>
         <div class="project">
-            <a href="https://github.com/cynogriffin/lettuce-b-frank">
+            <a href="https://github.com/cynogriffin/lettuce-b-frank" target="_blank">
                 <img src="./assets/images/lettuce.PNG" alt="browser alert">
             </a>
             <div class="project-words">
@@ -82,7 +87,7 @@
             </div>
         </div>
         <div class="project">
-            <a href="https://github.com/cynogriffin/spacelaunch-tracker">
+            <a href="https://github.com/cynogriffin/spacelaunch-tracker" target="_blank">
                 <img src="./assets/images/space-launch.jpg" alt="space launch">
             </a>
             <div class="project-words">
@@ -92,7 +97,7 @@
         </div>
     </section>
 
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <h2>Contact Me</h2>
         <form>
             <label for="contact-name">Your Name</label>
@@ -104,10 +109,10 @@
 
             <button type="submit">Submit</button>
         </form>
-    </section>
+    </section> -->
 
     <footer>
-        <p>&copy;2021 Coded and Created by Cody Griffin</p>
+        <p>&copy;2022 Coded and Created by Cody Griffin</p>
     </footer>
 </body>
 </html>
