changed contact links to link out to email

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="mailto:griffinc6@gmail.com">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
             <h3>Full Stack Web Developer</h3>
             <ul>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="mailto:griffinc6@gmail.com">Contact</a></li>
             </ul>
         </div>
         <nav class="social">
