updated the About Me section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             <img src="./assets/images/avatar.png" alt="avatar of Cody">
             <article>
                 <p>
-                    As a current HR professional with a background as a classically-trained musician, I bring a unique and diverse skillset with me into the field of tech. With a passion for code, I am in search of a career that I can grow into and be challenged at daily. I am married with a nearly 2 year old boy at home as well as two dogs and a cat. If you are interested in contacting me, please use the contact form at the bottom of the page to get in touch or feel free to reach out via LinkedIn. 
+                    Hello! My name is Cody and I am a full stack web developer trained in the MERN stack (but eager to learn anything and everything) and looking for a meaningful career in tech. With a background as a classically trained musician and composer, and more recently coming from almost 4 years of experience working as a Human Resources professional, I bring a unique and diverse skillset with me into the field. With a passion for code, I am in search of a career that I can grow into and be challenged at daily, committing to it my best time and energy. I am also actively exploring new ways to get involved in the coding community through meetups, blogging, and dipping my toes into open source.
+                </p>
+                <br>     
+                <p>  
+                    In my personal life, I am married with a 2 year old boy at home as well as two dogs and a cat. Besides code, I love learning/educating, a good cup of tea, fountain pens, and the occasional hike. If you are interested in contacting me, please use the contact buttons to get in touch via email or feel free to reach out via LinkedIn.
                 </p> 
             </article>
         </div>
