added hover to nav bar items

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </p>
                 <br>     
                 <p>  
-                    In my personal life, I am married with a 2 year old boy at home as well as two dogs and a cat. Besides code, I love learning/educating, a good cup of tea, fountain pens, and the occasional hike. If you are interested in contacting me, please use the contact buttons to get in touch via email or feel free to reach out via LinkedIn.
+                    In my personal life, I am married with a 2 year old boy at home as well as two dogs and a cat. Besides code, I love learning/educating, a good cup of tea, fountain pens, and the occasional hike. If you are interested in contacting me, please use the contact buttons above to get in touch via email or feel free to reach out via LinkedIn.
                 </p> 
             </article>
         </div>
