changed anchor in projects to default to github repo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section class="projects" id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <a href="https://cynogriffin.github.io/run-buddy/" target="_blank">
+            <a href="https://github.com/cynogriffin/run-buddy" target="_blank">
                 <img src="./assets/images/run buddy.PNG" alt="website screenshot">
             </a>
             <div class="project-words">
